--- a/brik repl.ipynb
+++ b/brik repl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 313,
    "id": "f61f184e",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 315,
    "id": "e5f2f020",
    "metadata": {},
    "outputs": [],
@@ -26,12 +26,13 @@
     "\n",
     "client = MongoClient('mongodb://%s:%s@127.0.0.1' % (username, password))\n",
     "db = client.brik\n",
-    "collection = db.tasks"
+    "collection = db.tasks\n",
+    "db.tasks.drop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 316,
    "id": "ddd59c55",
    "metadata": {},
    "outputs": [],
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 51,
    "id": "7ddffbaf",
    "metadata": {},
    "outputs": [],
@@ -142,6 +143,7 @@
     "    chapter_bounds = find_value_bounds('Chapter', working_rows_values)\n",
     "    chapters = split_by_bounds(chapter_bounds, working_rows_values)\n",
     "    # extract tasks with lesson info\n",
+    "    order = 0\n",
     "    for chapter in chapters:\n",
     "        current_lesson = \"\"\n",
     "        for item in chapter[1:]:\n",
@@ -154,93 +156,176 @@
     "                \"lesson\": current_lesson,\n",
     "                \"grade\": grade,\n",
     "                \"chapter\": chapter[0],\n",
-    "                \"task\": item\n",
+    "                \"task\": item,\n",
+    "                \"completed\": False,\n",
+    "                \"weight\": 3 if ('lab' in item.lower()) else 1,\n",
+    "                \"order\": order\n",
     "                })\n",
+    "                order += 1\n",
     "    return tasks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 156,
    "id": "d62f58f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "science_tasks = collection.find({'subject':'MS Physical Science'})"
+    "# how to schedule\n",
+    "# see how many classes need to be done\n",
+    "# see how many days each class has\n",
+    "# see how many tasks each day can have\n",
+    "# get start date\n",
+    "\n",
+    "# differnt ways to schedule\n",
+    "# have a target start and end date and evenly distribute tasks \n",
+    "# have a start and ideal task density then calculate how long it will take\n",
+    "db.week.drop()\n",
+    "week = {\n",
+    "        'monday': {'max_tasks':12},\n",
+    "        'tuesday': {'max_tasks':12},\n",
+    "        'wednesday': {'max_tasks':12},   \n",
+    "        'thursday': {'max_tasks':12},\n",
+    "        'friday': {'max_tasks':12},   \n",
+    "        'saturday': {'max_tasks':12},   \n",
+    "        'sunday': {'max_tasks':0}    \n",
+    "        }\n",
+    "\n",
+    "for day in week:\n",
+    "    db.week.insert_one({day : week[day]})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 319,
    "id": "c8e0fd07",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import datetime\n",
+    "today = datetime.date.today()\n",
+    "current_day = 0\n",
+    "daily_tasks = []\n",
+    "current_weight = 0\n",
+    "science_tasks = collection.find({'subject':'MS Physical Science'})\n",
+    "lw = list(week)\n",
+    "while True:\n",
+    "    try:\n",
+    "        task = science_tasks.next()\n",
+    "        daily_tasks.append(task)\n",
+    "        current_weight += task['weight']\n",
+    "        if current_weight > week[lw[current_day%7]]['max_tasks']:\n",
+    "            current_day += 1\n",
+    "            current_weight = 0\n",
+    "        daily_tasks[-1]['scheduled_for'] = today + datetime.timedelta(days=current_day)\n",
+    "    except:\n",
+    "        break\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 318,
    "id": "7b3700f0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "StopIteration",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [146]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mindexes\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnext\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/share/virtualenvs/brik-6dMTBymQ/lib/python3.10/site-packages/pymongo/command_cursor.py:288\u001b[0m, in \u001b[0;36mCommandCursor.next\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    285\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m doc \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    286\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m doc\n\u001b[0;32m--> 288\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m\n",
-      "\u001b[0;31mStopIteration\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "indexes.next()"
+    "for task in daily_tasks:\n",
+    "    query = {'_id':task['_id']}\n",
+    "    update = {\"$set\":{'scheduled_for':datetime.datetime.combine(task['scheduled_for'],datetime.time.min)}}\n",
+    "    db.tasks.update_one(query,update)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 299,
    "id": "44b8a547",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "this_week = db.tasks.find({'scheduled_for': { '$lt': datetime.datetime.today() + datetime.timedelta(days=7)}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "id": "7013e619",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "49"
+       "0"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_tasks"
+    "this_week = this_week.rewind()\n",
+    "this_week.retrieved"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "id": "c200883b",
+   "execution_count": 307,
+   "id": "c198d27c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money money \n"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "x = 0\n",
+    "for x in range(this_week.retrieved - 1):\n",
+    "    task = this_week.next()\n",
+    "    print(f\"{task['subject']}, {task['lesson']}, {task['chapter']}, {task['scheduled_for']}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7013e619",
+   "id": "e63d4265",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "id": "8d64c189",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('62e58ae1a05656d12a32dc56'),\n",
+       " 'subject': 'MS Physical Science',\n",
+       " 'lesson': 'Lesson: Chemical Bonding',\n",
+       " 'grade': 'Middle School',\n",
+       " 'chapter': 'Chapter 3: Bonding',\n",
+       " 'task': 'Assignment: Describe chemical bonds.',\n",
+       " 'completed': False,\n",
+       " 'weight': 1,\n",
+       " 'order': 84,\n",
+       " 'scheduled_for': datetime.datetime(2022, 8, 6, 0, 0)}"
+      ]
+     },
+     "execution_count": 297,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a35d373",
    "metadata": {},
    "outputs": [],
    "source": []
